# proton-drive

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: run_integration_tests.yml  run_tests.yml
proton_drive/: __init__.py  client.py  config.py  exceptions.py
proton_drive/api/: __init__.py  endpoints.py  http_client.py
proton_drive/api/endpoints/: __init__.py  auth.py  drive.py  user.py
proton_drive/core/: cache.py  wait_group.py
proton_drive/crypto/: __init__.py  aes.py  key_manager.py  pgpy_backend.py  protocol.py  secure_bytes.py  session_key.py
proton_drive/models/: __init__.py  auth.py  crypto.py  drive.py
proton_drive/services/: __init__.py  auth_service.py  file_service.py  key_cache.py  tree_service.py
proton_drive/tests/: test_exceptions.py  test_secure_bytes.py
proton_drive/tests/api/: test_endpoints.py  test_http_client.py
proton_drive/tests/api/data/: 06362276a70e0a66.json  0658c858618dfe3e.json  1777560bb5d713c4.json  1c6dd2f0c3119e26.json  1d457ac5a007c001.json  26d022f653388de7.json  33939a1f47b22257.json  47bafc54a8b215cd.json  53f2fdd04a4129e0.json  5e14f9ad8b78886b.json  6d546498e75f1bed.json  7f9c356672790c53.json  87637e4635262a0b.json  a44e1d8bef3b84fe.json  b0697caa050991f8.json  b9014cbe48c03448.json  bcbe810c47e8a2bd.json  c4b93fe4ccd83635.json  e9215eb3132c7aa1.json
proton_drive/tests/api/endpoints/: conftest.py  test_auth.py  test_drive.py  test_user.py
proton_drive/tests/api/endpoints/data/: 13e5f44b19c3ad3e.json  1f5ba453b6e165c7.json  2e70861efbda140c.json  39ef6467d287dcaa.json  5ee9afe663ce0daf.json  905536950de0925d.json  (+6 more)
proton_drive/tests/core/: test_cache.py
proton_drive/tests/crypto/: test_aes.py  test_key_manager.py  test_pgpy_backend.py  test_session_key.py
proton_drive/tests/integration/: conftest.py  test_client.py
proton_drive/tests/models/: test_crypto.py  test_drive.py
proton_drive/tests/services/: conftest.py  constants.py  test_auth_service.py  test_file_service.py  test_key_cache.py  test_tree_service.py
proton_drive/tests/utils/: recording_transport.py
