[project]
name = "proton-drive"
version = "0.1.0"
description = "Async Python client for Proton Drive with full end-to-end encryption support"
readme = "README.md"
requires-python = "==3.14.2"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Wenceslas Sanchez" }
]
keywords = [
    "proton",
    "proton-drive",
    "protonmail",
    "cloud-storage",
    "end-to-end-encryption",
    "e2ee",
    "pgp",
    "openpgp",
    "srp",
    "async",
    "asyncio",
    "privacy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Topic :: Internet :: File Transfer Protocol (FTP)",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "httpx==0.28.1",
    "pgpy==0.6.0",
    "cryptography==46.0.5",
    "proton-client==0.5.1",
    "bcrypt==5.0.0",
    "python-gnupg==0.5.6",
    "structlog==25.5.0",
    "standard-imghdr==3.13.0",  # Required for pgpy on Python 3.13+
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio>=1.3.0",
]
lint = [
    "pre-commit==4.5.1",
    "ruff==0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["proton_drive"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests requiring real Proton credentials (deselect with '-m not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
extend-select = ["I"]
fixable = ["I", "F401"]
